argocd/base/argo-rollouts/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: argo-rollouts
  annotations:
    argocd.argoproj.io/sync-wave: "-1"
