argocd/base/argo-rollouts/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: argo-rollouts-dashboard
  namespace: argo-rollouts
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: istio-gateway
      namespace: istio-gateway
      sectionName: https
  hostnames:
    - rollouts.CLUSTER_DOMAIN
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - group: ""
          kind: Service
          name: argo-rollouts-dashboard
          port: 3100
          weight: 1
